<resources>
    <string name="PREF_NAME" translatable="false">Sakhi-pref-1</string>
    <string name="PREF_D2D_API_KEY" translatable="false">JWT-Token_A</string>
    <string name="PREF_primary_API_KEY" translatable="false">JWT-Token_B</string>
    <string name="PREF_primary_JWT_API_KEY" translatable="false">JWT-Token_N</string>
    <string name="PREF_primary_REFRESH_TOKEN" translatable="false">Refresh-Token_N</string>
    <string name="PREF_rem_me_uname" translatable="false">user-name-local-saved</string>
    <string name="PREF_rem_me_pwd" translatable="false">password-local-saved</string>
    <string name="PREF_rem_me_state" translatable="false">state_user-local-saved</string>
    <string name="PREF_location_record_entry" translatable="false">location-record</string>
    <string name="PREF_user_entry" translatable="false">logged-in-user</string>
    <string name="PREF_full_load_pull_progress" translatable="false">full_load_sync_pull_amrit</string>
    <string name="PREF_first_pull_amrit_last_synced_page" translatable="false">full_load_sync_pull_amrit_first_sync_last_saved_page</string>
    <string name="PREF_current_saved_language" translatable="false">Locale.Helper.Selected.Language</string>
    <string name="PREF_current_dp_uri" translatable="false">DP_URI_cat</string>
    <string name="PREF_camp_mode_enabled" translatable="false">camp-mode-enabled</string>
    <string name="PREF_camp_hub_url" translatable="false">camp-hub-url</string>
    <string name="PREF_camp_hub_connected" translatable="false">camp-hub-connected</string>
    <string name="radio_title" translatable="false">%s<span> *</span></string>
    <string name="radio_title_ds" translatable="false">%s<span> **</span></string>
    <string name="str_add_member">Add Member</string>
    <string name="tracking_date">Date of Visit</string>
    <string name="death_date">Date of death</string>
    <string name="visit_date">Visit Date</string>
    <string name="aes_case_status_date">AES / JE Case Status Date</string>
    <string name="place_of_Death">Place of Death</string>
    <string name="reason_of_Death">Reason for Death</string>
    <string name="beneficiary_status">Beneficiary Status</string>
    <string name="refer_to">Referred To</string>
    <string name="treatment_start_date">Treatment Start Date</string>
    <string name="ncd_refer_alert">Do you want to refer to HWC facility?</string>
    <string name="cbac_screening_submitted">CBAC Screening submitted</string>
    <string name="title_activity_home" translatable="false">TBMJA</string>
    <string name="splash_stop_tb" translatable="false">TBMJA</string>
    <string name="splash_tagline" translatable="false">Screen early. Treat early.</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="cd_icon_grid_icon">icon</string>
    <string name="nav_item_1_text">Name : <b>%s</b></string>
    <string name="nav_item_2_text">Username : <b>%s</b></string>
    <string name="nav_item_3_text">User ID :  <b>%s</b></string>
    <string name="tv_required_text_asterisk">*</string>
    <string name="notification_sync_channel_name">Sync Data</string>
    <string name="notification_sync_channel_description">Upload beneficiaries to Server</string>
    <string name="notification_sync_channel_id">sakhi-sync0</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_skip">Skip</string>
    <string name="mosquito_net_off">Mosquito Net OFF</string>
    <string name="btn_apply">Apply</string>
    <string name="long_to_string">%d</string>
    <string name="tv_reg_date_ph">Registration Date</string>
    <string name="reg_date">Reg Date</string>
    <string name="family_members">Family members</string>
    <string name="mobile_number_ben">Mobile Number</string>
    <string name="btn_examine_count_ben">Examine (%1$d/%2$d)</string>
    <string name="screening_presumptive">Presumptive</string>
    <string name="screening_asymptomatic">Asymptomatic</string>
    <string name="tv_ben_name_ph">Beneficiary Name</string>
    <string name="tv_type_of_list">Type of List</string>
    <string name="tv_rch_id">RCH ID</string>
    <string name="tv_ben_surname">Beneficiary Surname</string>
    <string name="tv_gender_ph">Gender</string>
    <string name="tv_father_name_ph">Father Name</string>
    <string name="tv_husband_name_ph">Husband Name</string>
    <string name="tv_spouse_name_ph">Spouse Name</string>
    <string name="tv_family_head_name_ph">Head of Family</string>
    <string name="tv_ben_id_ph">Ben ID</string>
    <string name="tv_mob_no_ph">Mobile Number</string>
    <string name="tv_age_ph">Age</string>
    <string name="tv_suspected_hrp_ph">Suspected HRP</string>
    <string name="iv_sync_state_tv">SYNC STATE</string>
    <string name="iv_death_indicator">Death</string>
    <string name="iv_case_status_tv">CASE STATUS</string>
    <string name="chat_error">There is some error in loading your chat bot</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="immunization_dosage_count">%1$d/%2$d</string>
    <string name="visit_format">Visit-%d</string>
    <string-array name="type_of_tb_case">
        <item>New case of TB</item>
        <item>Previously treated TB case</item>
        <item>DR-TB case</item>
    </string-array>
    <string-array name="reason_for_suspicion">
        <item>Treatment failure</item>
        <item>TB Relapse/Recurring symptoms</item>
        <item>Contact with DR-TB case</item>
        <item>Treatment after LFU (Lost to Follow-up)</item>
        <item>Other</item>
    </string-array>
    <string name="has_symptoms">Does the patient have symptoms?</string>
    <string name="tb_asymptomatic_symptoms">TB screening for asymptomatic beneficiaries</string>
    <string name="is_chest_xray_done">Is the TB Chest X-Ray Test done?</string>
    <string-array name="chest_xray_result">
        <item>Clinically Diagnosed TB</item>
        <item>TB Not suspected</item>
    </string-array>
    <string-array name="referral_facility">
        <item>District TB Centre (DTC)</item>
        <item>HWC</item>
        <item>PHC</item>
        <item>CHC</item>
        <item>District Hospital</item>
        <item>Govt. Medical College</item>
    </string-array>
    <string name="is_tb_confirmed">Has the diagnosis of TB been confirmed?</string>
    <string name="is_drtb_confirmed">Has the diagnosis of DR-TB been confirmed?</string>
    <string name="tb_is_digital_chest_xray_conducted">Is Digital Chest X-ray conducted?</string>
    <string name="tb_digital_chest_xray_conducted">Is Digital chest x-ray conducted?</string>
    <string name="tb_digital_chest_xray_result">Digital Chest X-Ray Test Result</string>
    <string name="tb_sputum_sample_collected">Is Sputum sample collected?</string>
    <string name="tb_ai_cough_assessment_conducted">AI Cough Assessment conducted?</string>
    <string name="tb_ai_cough_assessment_result">AI Cough Assessment result</string>
    <string name="tb_naat_conducted">True NAT conducted?</string>
    <string name="tb_naat_result">True NAT result</string>
    <string name="tb_quick_naat_conducted">Is Truenat - MTB Test Conducted?</string>
    <string name="tb_quick_naat_result">Truenat - MTB Test Result</string>
    <string name="tb_quick_rif_conducted">Is Truenat - RIF Test Conducted?</string>
    <string name="tb_quick_rif_result">Truenat - RIF Test Result</string>
    <string name="tb_liquid_culture_conducted">Is Liquid culture conducted?</string>
    <string name="tb_liquid_culture_result">Liquid Culture result</string>
    <string name="tb_suspected_quick_title">Diagnostics</string>
    <string name="tb_suspected_quick_info">Select the conducted tests for this beneficiary.</string>
    <string name="result">Result</string>
    <string name="tb_suspected_quick_save_failed">Unable to save TB suspected details.</string>
    <string name="tb_suspected_alert_confirmed">This beneficiary now qualifies for Confirmed TB cases.</string>
    <string-array name="tb_referral_tests">
        <item>AI Cough Assessment</item>
        <item>Digital Chest X-ray</item>
        <item>Sputum Collection</item>
        <item>True NAT</item>
    </string-array>
    <string-array name="tb_submitted_yet_suspected">
        <item>HWC</item>
        <item>PHC</item>
        <item>CHC</item>
        <item>District Hospital</item>
        <item>Govt. Medical College</item>
    </string-array>
    <string-array name="tb_suspected_sample_submitted_at">
        <item>DMC</item>
        <item>DH</item>
        <item>CHC</item>
        <item>PHC</item>
        <item>SC</item>
    </string-array>
    <string-array name="yes_no_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="temp_array">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    <string-array name="mdsr_cause_of_death_type">
        <item>Suspected Maternal death</item>
        <item>Non-maternal death</item>
    </string-array>
    <string-array name="ahd_place_options">
        <item>School</item>
        <item>Anganwadi Centre</item>
        <item>Community center</item>
    </string-array>
    <string name="rch_id">RCH ID</string>
    <string name="add_visit">Add Visit</string>
    <string name="view">VIEW</string>
    <string name="asha_profile">Profile</string>
    <string-array name="sync_records">
        <item>Beneficiary</item>
        <item>CBAC</item>
        <item>TB Screening</item>
        <item>TB Suspected</item>
        <item>EC Registration</item>
        <item>EC Tracking</item>
        <item>PW Registration</item>
        <item>PW ANC</item>
        <item>HRP Assess</item>
        <item>HRP Track</item>
        <item>HR NonPreg. Assess</item>
        <item>HR NonPreg Track</item>
        <item>Anthropometric</item>
        <item>General Examination</item>
        <item>OPD</item>
        <item>Diagnosis</item>
        <item>Counselling</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="delete_my_account">Request to delete my account</string>
    <string name="all">All</string>
    <string name="with_abha">With ABHA</string>
    <string name="without_abha">Without ABHA</string>
    <string name="age_above_30_years">Age above 30 years</string>
    <string name="filter_list">Filter</string>
    <string name="ben_with_rch_id">Ben With RCH ID</string>
    <string name="date_of_provision">Date of Provision</string>
    <string name="bottle_number">Bottle Number</string>
    <string name="s_no">S. No</string>
    <string name="bottle_distribution">Bottle Distribution</string>
    <string name="optional">(Optional)</string>
    <string name="sync_dashboard_no_logs">No sync logs yet. Trigger a sync to see activity.</string>
    <string name="sync_dashboard_clear_logs">Clear Logs</string>
    <string name="sync_dashboard_export_logs">Export Logs</string>
    <string name="filter_sort_by">Sort By</string>
    <string name="filter_newest_first">Newest First</string>
    <string name="filter_oldest_first">Oldest First</string>
    <string name="filter_age_wise">Age Wise</string>
    <string name="filter_syncing_first">Syncing Data First</string>
    <string name="filter_unsynced_first">Un-Synced First</string>
    <string name="btn_cancel">Cancel</string>
    <string name="chief_complaint">Chief Complaint</string>
    <string name="prescription">Prescription</string>
    <string name="notes_remarks">Notes / Remarks</string>
</resources>