<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/supervisorFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_supervisor" />
        <item
            android:id="@+id/ashaProfileFragment"
            android:icon="@drawable/ic_person"
            android:title="@string/asha_profile" />

    </group>

    <group>

        <item
            android:id="@+id/sync_pending_records"
            android:checkable="false"
            android:icon="@drawable/ic_synced"
            android:title="@string/sync_records" />

    </group>

    <group>

        <item
            android:id="@+id/abha_id_activity"
            android:checkable="false"
            android:icon="@drawable/ic_completed_tasks"
            android:title="@string/create_abha_number" />

    </group>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/ChatFragment"
            android:icon="@drawable/baseline_chat_24"
            android:visible="true"
            android:title="@string/help_and_support" />

    </group>

    <group
        android:id="@+id/menu_group_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_delete_account"
            android:checkable="false"
            android:icon="@drawable/ic_delete_account"
            android:title="@string/delete_my_account" />
        <item
            android:id="@+id/menu_logout"
            android:checkable="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>


</menu>
