<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/table_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottle_distribution"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="8dp" />

    <LinearLayout
        android:id="@+id/tableHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@color/table_header_background"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/s_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/s_no"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bottle_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bottle_number"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date_of_provision"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_Rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />

</LinearLayout>
